<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/sorting"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <RadioButton
            android:id="@+id/radio_min_to_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_min_to_max" />

        <RadioButton
            android:id="@+id/radio_max_to_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_max_to_min" />

        <RadioButton
            android:id="@+id/radio_abc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_abc" />

        <RadioButton
            android:id="@+id/radio_cba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_cba" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>